modified:   .github/workflows/demo.yml 	new file:   Dockerfile 	new file:   entrypoint.sh

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,23 +1,16 @@
-# .github/workflows/main.yml
-name: Testing My hello-world Action
-
-on: workflow_dispatch
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - id: greetings
-        name: Using hello-world
-        # use the action that's inside the same repository
-        uses: ./
-        with:
-          name: Sadra
-
-      - name: Echo phrase
-        run: |
-          echo ${{ steps.greetings.outputs.phrase }}
+# action.yml
+name: 'Hello World'
+description: 'Greet someone and record the time'
+inputs:
+  who-to-greet:  # id of input
+    description: 'Who to greet'
+    required: true
+    default: 'World'
+outputs:
+  time: # id of output
+    description: 'The time we greeted you'
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.who-to-greet }}
