--- a/Dockerfile_old
+++ b/Dockerfile_old
@@ -1,14 +1,9 @@
 # Container image that runs your code
-FROM python:3.10
-
-# WORKDIR
-WORKDIR /app
+FROM alpine:3.10
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY . /app
-
-RUN pip install -r requirements.txt
+COPY entrypoint.sh /entrypoint.sh
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
-ENTRYPOINT ["python", "./hello_world.py"]
+ENTRYPOINT ["/entrypoint.sh"]
 
